authelia/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authelia
  labels:
    app.kubernetes.io/name: authelia
spec:
  selector:
    app.kubernetes.io/name: authelia
  ports:
    - protocol: TCP
      appProtocol: http
      port: 80
      targetPort: http
