authelia/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authelia
  labels:
    app.kubernetes.io/name: authelia
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - auth.xmple.io
  rules:
    - backendRefs:
        - name: authelia
          port: 80
          kind: Service
